--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Travis Blanton's Portfolio</title>
+  <title>Heather Blanton</title>
 
   <!-- Font Awesome Icons -->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -30,23 +30,23 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">Travis' Portfolio</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">2022 Sweat Crew</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto my-2 my-lg-0">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">About</a>
+            <a class="nav-link js-scroll-trigger" href="#about">Workout With Me</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
+            <a class="nav-link js-scroll-trigger" href="#skills">Work With Me</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
+            <a class="nav-link js-scroll-trigger" href="#portfolio">Results/Testimonals</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+            <a class="nav-link js-scroll-trigger" href="#contact">Contact Me</a>
           </li>
         </ul>
       </div>
@@ -58,12 +58,12 @@
     <div class="container h-100">
       <div class="row h-100 align-items-center justify-content-center text-center">
         <div class="col-lg-10 align-self-end">
-          <h1 class="text-uppercase text-white font-weight-bold">Travis Blanton</h1>
+          <h1 class="text-uppercase text-white font-weight-bold">Hi, I'm Heather</h1>
           <hr class="divider my-4">
         </div>
         <div class="col-lg-8 align-self-baseline">
-          <p class="text-white-75 font-weight-light mb-5">Driven analytical professional, with a background in both healthcare and finance, skilled in using a specific set of tools to analyze large datasets and extract business insights that deliver profitability, growth, and productivity. Proven success in developing relationships and working closely with others to provide problem-solving results in a timely manner.</p>
-          <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">About Me</a>
+          <p class="text-white-75 font-weight-light mb-5">I'm a virtual health and fitness coach! I absolutely love what I do and I am energized by helping others reach their goals! I'm passionate about people and how giving your body what it needs improves emotional well being. I live in Texas with my husband and we have a beautiful 1 year old daughter, a golden retriever, and a cat. These programs have changed. my. life. I sincerely believe that can happen for anyone who works with me. I can't wait to get to know you!</p>
+          <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Workout With Me</a>
         </div>
       </div>
     </div>
@@ -74,17 +74,11 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-8 text-center">
-          <h2 class="text-white mt-0">Business Intelligence Analyst</h2>
+          <h2 class="text-white mt-0">Fitness + Nutrition</h2>
           <hr class="divider light my-4">
           <p class="text-white-50 mb-4">
 
-My name is Travis and I am, and will always be, a fighting Texas Aggie! Yes I am one of those. I was born and raised a Texan and have always found a passion working with computers. I built my first homemade computer when I was 14, and grew up helping my dad in his business, Broadcast Fusion llc., where I built and upgraded X-files and IP Directors, built all types of cables, set up networks, and was lucky enough to travel to the NBA Finals, Winter and Summer X-games, and The ESPY's to help upgrade storage systems. After I graduated high school I continued to work with my dad remotely while attending Texas A&M University. My dad got a contract with CBS NFL, where every Thursday through Sunday we would remote in to the CBS trucks at each site and setup and manage a storage system to capture live content, and then send them directly to New York where they would utilize these clips for highlight reels and storage backups. 
-
-After college I went on to work at Baylor Scott & White in Frisco where I watched heart rhythms on the Post-Surgical Unit, communicated with doctors and nurses to get orders into an EMR system, and also was in charge of admitting patients to the floor. I loved working in the Healthcare field and felt a real sense of purpose with every patient I got to interact with.
-
-I am currently working at Marquis Software Solutions where I analyze big data sets form hundreds of different financial institutions and get to use the insights that I find to purpose direct marketing programs. I then build these marketing campaigns through trigger matrices that use filters to trigger on specific criteria and then send direct mail and emails to our clients members to increase customer engagement, spending, and retention rates.
-
-I'm always looking for new opportunities to advance my career. I love to help people and finding insights in data is one of the ways I love to do that. I look forward to connecting! </p>
+Need resources and accountability to finally reach your health and fitness goals? That's what I needed too! My group consists of at home workouts, full nutrition plans with recipes, a supportive accoutability group, weekly prize opportunities, and 1:1 coaching with me! As a personal trainer, I had the information but lacked the accountability and consistency. This is what finally changed that for me, for life.  </p>
           <a class="btn btn-light btn-xl js-scroll-trigger" href="#skills">My Skills</a>
         </div>
       </div>
