--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ Need resources and accountability to finally reach your health and fitness goals
   <!-- Services Section -->
   <section class="page-section" id="skills">
     <div class="container">
-      <h2 class="text-center mt-0">Analytical Toolset</h2>
+      <h2 class="text-center mt-0">Work With Me</h2>
       <hr class="divider my-4">
       <div class="row">
         <div class="col-lg-3 col-md-6 text-center">
